# Annotate

./: .gitignore  LOCAL_WHISPER_IMPLEMENTATION.md  README.md  WINDOWS_PER_PROCESS_AUDIO_ROUTING.md  package-lock.json  package.json
.github/workflows/: release.yml
landing/: index.html  style.css
scripts/: export_gector.py  test_gec.py
scripts/gector-onnx/: added_tokens.json  labels.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
src/: gdrive-sync.js  index.css  index.html  main.js  oauth.config.json.example  onboarding.html  onboarding.js  throbber.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/whisper-worker/: Cargo.toml
src-tauri/crates/whisper-worker/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  gec.rs  google_auth.rs  lib.rs  subtitle.rs  transcribe.rs  vad.rs  whisper_local.rs
