[workspace]
members = ["crates/whisper-worker"]

[package]
name = "annotate"
version = "0.1.0"
description = "Push-to-talk voice transcription"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-store = "2.4.2"
reqwest = { version = "0.13.2", features = ["multipart", "json", "stream"] }
enigo = { version = "0.3.0", features = ["serde"] }
base64 = "0.22.1"
sysinfo = "0.36.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_WinRT", "Win32_System_Diagnostics_ToolHelp", "Win32_Media_Audio", "Win32_Devices_FunctionDiscovery", "Win32_UI_Shell_PropertiesSystem"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "process", "io-util"] }
zip = "2"
open = "5"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "download-binaries", "tls-native"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.17"
keyring = { version = "3", features = ["windows-native"] }
hound = "3.5"
tauri-plugin-dialog = "2"
